Fix landing page navigation: Add proper dashboard demo interface and correct routing

--- a/demo-landing/index.html
+++ b/demo-landing/index.html
@@ -196,7 +196,7 @@
                         </div>
                     </div>
                     <div class="interface-frame">
-                        <iframe src="/" class="w-full h-full"></iframe>
+                        <iframe src="/dashboard/" class="w-full h-full"></iframe>
                     </div>
                 </div>
 
@@ -361,7 +361,7 @@
         }
 
         function openDashboard() {
-            window.open('/', '_blank');
+            window.open('/dashboard/', '_blank');
         }
 
         function openDriverApp() {
