docs: Add redeployment guide and fix CORS/routing issues for production
- Add comprehensive REDEPLOY_GUIDE.md with Railway deployment instructions and troubleshooting steps
- Improve CORS_ORIGINS parsing in settings.py to handle string, comma-separated, and JSON array formats
- Change default CORS_ORIGINS from localhost references to "*" for easier production deployment
- Fix demo landing page to use relative paths instead of hardcoded localhost:3002 references
- Add proper dashboard routing with redirect to demo page (can be updated to serve actual frontend)
- Simplify dashboard static file mounting and routing logic
- Add redeploy.py placeholder for future automation scripts
- Create SLIDE_4_DECISION_LOGIC.md placeholder for documentation
These changes enable seamless redeployment on Railway with a single URL that showcases the complete system for judges and stakeholders.

--- a/demo-landing/index.html
+++ b/demo-landing/index.html
@@ -361,6 +361,7 @@
         }
 
         function openDashboard() {
+            // Use relative path for production deployment
             window.open('/dashboard/', '_blank');
         }
 
